--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,7 +31,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
-        uses: docker/login-action@v2
+        uses: docker login -u saurav2603
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -41,8 +41,8 @@ jobs:
         with:
           context: .
           push: true
-          tags: your-username/nodejs-ci-cd:latest
+          tags: sauravkumar2603/nodejs-ci-cd:latest
 
       - name: Deploy to server
         run: |
-          ssh user@your-server 'docker pull your-username/nodejs-ci-cd:latest && docker run -d -p 80:3000 your-username/nodejs-ci-cd:latest'
+          ssh ec2-user@ec2-54-235-7-70 'docker pull your-username/nodejs-ci-cd:latest && docker run -d -p 80:3000 your-username/nodejs-ci-cd:latest'
