--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,7 +31,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
-        uses: docker login -u saurav2603
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -45,4 +45,4 @@ jobs:
 
       - name: Deploy to server
         run: |
-          ssh ec2-user@ec2-54-235-7-70 'docker pull your-username/nodejs-ci-cd:latest && docker run -d -p 80:3000 your-username/nodejs-ci-cd:latest'
+          ssh ec2-user@ec2-54-235-7-70 'docker pull saurav2603/nodejs-ci-cd:latest && docker run -d -p 80:3000 saurav2603/nodejs-ci-cd:latest'
